tests/corpus/snapshots/subroutine-with-register-arguments-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 26,
  "d": [
    "$c",
    "$0",
    "$c",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$103c",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "4f806ecbfc9e86bd"
}
