tests/corpus/snapshots/subroutine-with-stack-arguments-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 25,
  "d": [
    "$19",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$19"
  ],
  "a": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1050",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "6c47e42cb1acecdb"
}
