tests/corpus/snapshots/sum-of-an-array-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 15,
  "d": [
    "$6c",
    "$ffff",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$1020",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1014",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "d298eb53d1afc35f"
}
