tests/corpus/snapshots/sum-of-two-numbers-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 14,
  "d": [
    "$9",
    "$e",
    "$e",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$2020",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1038",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "First number: \nSecond number: \nThe sum is 14",
  "memory": "9098e93d18d4d952"
}
