tests/corpus/snapshots/sum-of-two-numbers-1.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "entry": "$1000",
  "instructions": [
    {
      "address": "$1000",
      "line": 0,
      "text": "lea $2000,a1"
    },
    {
      "address": "$1004",
      "line": 1,
      "text": "move.b #$12,d0"
    },
    {
      "address": "$1008",
      "line": 2,
      "text": "trap #$f"
    },
    {
      "address": "$100c",
      "line": 3,
      "text": "move.l d1,d2"
    },
    {
      "address": "$1010",
      "line": 5,
      "text": "lea $200f,a1"
    },
    {
      "address": "$1014",
      "line": 6,
      "text": "move.b #$12,d0"
    },
    {
      "address": "$1018",
      "line": 7,
      "text": "trap #$f"
    },
    {
      "address": "$101c",
      "line": 8,
      "text": "add.l d1,d2"
    },
    {
      "address": "$1020",
      "line": 10,
      "text": "lea $2020,a1"
    },
    {
      "address": "$1024",
      "line": 11,
      "text": "move.l d2,d1"
    },
    {
      "address": "$1028",
      "line": 12,
      "text": "move.b #$11,d0"
    },
    {
      "address": "$102c",
      "line": 13,
      "text": "trap #$f"
    },
    {
      "address": "$1030",
      "line": 15,
      "text": "move.b #$9,d0"
    },
    {
      "address": "$1034",
      "line": 16,
      "text": "trap #$f"
    }
  ],
  "memory": [
    {
      "address": "$2000",
      "bytes": "4669727374206e756d6265723a2000"
    },
    {
      "address": "$200f",
      "bytes": "0a5365636f6e64206e756d6265723a2000"
    },
    {
      "address": "$2020",
      "bytes": "0a5468652073756d2069732000"
    }
  ],
  "labels": {
    "answer": {
      "address": "$2020",
      "line": 21
    },
    "first": {
      "address": "$2000",
      "line": 19
    },
    "second": {
      "address": "$200f",
      "line": 20
    }
  }
}
