tests/corpus/snapshots/two-dimensional-array-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 23,
  "d": [
    "$2",
    "$1",
    "$12",
    "$c8",
    "$2",
    "$de",
    "$ffff",
    "$0"
  ],
  "a": [
    "$2000",
    "$201a",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1044",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "be97028580321341"
}
