tests/corpus/snapshots/two-dimensional-array-1.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "entry": "$1000",
  "instructions": [
    {
      "address": "$1000",
      "line": 3,
      "text": "lea $2000,a0"
    },
    {
      "address": "$1004",
      "line": 4,
      "text": "move.l #$2,d0"
    },
    {
      "address": "$1008",
      "line": 5,
      "text": "move.l #$1,d1"
    },
    {
      "address": "$100c",
      "line": 6,
      "text": "move.l d0,d2"
    },
    {
      "address": "$1010",
      "line": 7,
      "text": "mulu #$4,d2"
    },
    {
      "address": "$1014",
      "line": 8,
      "text": "add.l d1,d2"
    },
    {
      "address": "$1018",
      "line": 9,
      "text": "add.l d2,d2"
    },
    {
      "address": "$101c",
      "line": 10,
      "text": "move.w 0(a0,d2.w),d3"
    },
    {
      "address": "$1020",
      "line": 12,
      "text": "lea $2000,a1"
    },
    {
      "address": "$1024",
      "line": 13,
      "text": "move.l d1,d4"
    },
    {
      "address": "$1028",
      "line": 14,
      "text": "add.l d4,d4"
    },
    {
      "address": "$102c",
      "line": 15,
      "text": "adda.l d4,a1"
    },
    {
      "address": "$1030",
      "line": 16,
      "text": "clr.w d5"
    },
    {
      "address": "$1034",
      "line": 17,
      "text": "move.w #$2,d6"
    },
    {
      "address": "$1038",
      "line": 19,
      "text": "add.w (a1),d5"
    },
    {
      "address": "$103c",
      "line": 20,
      "text": "addi.l #$8,a1"
    },
    {
      "address": "$1040",
      "line": 21,
      "text": "dbf d6,$1038"
    }
  ],
  "memory": [
    {
      "address": "$2000",
      "bytes": "0001000200030004"
    },
    {
      "address": "$2008",
      "bytes": "000a0014001e0028"
    },
    {
      "address": "$2010",
      "bytes": "006400c8012c0190"
    }
  ],
  "labels": {
    "column": {
      "address": "$1038",
      "line": 18
    },
    "grid": {
      "address": "$2000",
      "line": 24
    }
  }
}
