tests/corpus/snapshots/variables-in-memory-1-run.snap
---
source: src/test/corpus.rs
expression: fixture
---
{
  "status": "terminated",
  "steps": 4,
  "d": [
    "$131",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0"
  ],
  "a": [
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$0",
    "$1000000"
  ],
  "pc": "$1010",
  "flags": "X:0 N:0 Z:0 V:0 C:0",
  "output": "",
  "memory": "4ad49256ca9aca8c"
}
